[package]
name = "clusterd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
cuid = "1.2.0"
tokio = { version = "1.22.0", features = ["macros", "tracing", "rt-multi-thread"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
